--- a/styles.css
+++ b/styles.css
@@ -75,3 +75,17 @@ body {
     height: auto;
     object-fit: cover;
 }
+/* This is the final concept, using a negative line number for placement */
+.beta-badge {
+    /* Place the badge in the last column */
+    grid-column-start: -2;
+    grid-column-end: -1;
+    grid-row-start: 3;
+    /* Basic styling for the badge */
+    justify-self: end;
+    align-self: end;
+    padding: 5px;
+    background-color: #007bff;
+    color: black;
+    border-radius: 5px;
+}
